fix text alignt archive description

--- a/sass/site/secondary/_archive.scss
+++ b/sass/site/secondary/_archive.scss
@@ -6,6 +6,7 @@
 .archive-description {
 	display: flex;
 	justify-content: center;
+	text-align: center;
 	margin-bottom: 40px;
 	margin-top: 0;
 	@include font-size(2);
