--- a/style.css
+++ b/style.css
@@ -1407,6 +1407,7 @@ span.is-toggled {
 .archive-description {
   display: flex;
   justify-content: center;
+  text-align: center;
   margin-bottom: 40px;
   margin-top: 0;
   font-size: 20px;
